Revised to incorporate feedback

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,12 +1,13 @@
----
+
 ---
 title: "Reproducible Research: Peer Assessment 1"
 author: "Siobhan O Connor"
 date: "4/16/2019"
-output: 
-  html_document:
-  keep_md: true
-
+fig_width: 6 
+fig_height: 4 
+output: html_document
+keep_md: true
+   
 
 ---
 ### Executing with cmd - knit("PA1_template.Rmd","PA1_template.md")
@@ -16,7 +17,6 @@ output:
 
 ```{r setup, echo=TRUE}
 
-knitr::opts_chunk$set(echo = TRUE)
 
 
 library(lubridate)
@@ -33,9 +33,9 @@ test <- sum(is.na(data))
 msg <- paste("There are NAs present in data : " ,test , " NA occurences")
 print(msg)
 
-
-
 stats_summary <- summary(data)  
+
+str(stats_summary)
 
 print(stats_summary)
 
@@ -56,13 +56,23 @@ msg <- paste("The mean total number of steps is ", mean_of_total_steps)
 
 print(msg)
 
+median_total_steps <- round(median(total_steps_by_date$steps))
+
+msg <- paste("The median total number of steps is ", median_total_steps)
+
+print(msg)
+
+
+
 ## 1. Histogram of Total number of Steps taken each day
 
-ggplot(data=total_steps_by_date,aes(date,steps)) +
-  geom_bar(stat="summary",fun.y="sum",fill="red",col="black")+
-  geom_hline(yintercept=mean_of_total_steps,col="yellow")+
-  ggtitle("Total Number of Steps taken each Day")+
-  labs(x="Date",y="Number of Steps")
+ggplot(data=total_steps_by_date,aes(total_steps_by_date$steps)) +
+   geom_histogram(binwidth=1000,col="blue", fill="purple") + 
+  labs(title="Total Steps", x="Steps", y="Frequency") 
+
+
+
+
 
 ```
 
@@ -91,6 +101,8 @@ median_steps_by_date <- data %>%
 #### Time series Plot of Average Steps Per Day with mean for all days added as yellow line 
 
 ```{r Daily_Activity}
+
+
 
 ggplot(data=mean_steps_by_date,aes(date,steps),na.rm=TRUE) +
   geom_line(col="blue",size = 1.5 )+
@@ -160,11 +172,11 @@ total_steps_no_na_by_date <-  data_na_steps_replaced %>%
   group_by(date) %>%
   summarise(steps = sum(steps,na.rm=TRUE))
 
+ggplot(data=total_steps_no_na_by_date,aes(total_steps_no_na_by_date$steps)) +
+   geom_histogram(binwidth=1000,col="blue", fill="orange") + 
+  labs(title="Total Steps", x="Steps", y="Frequency") 
 
-ggplot(data=total_steps_no_na_by_date,aes(date,steps)) +
-  geom_bar(stat="summary",fun.y="sum",fill="purple",col="black")+
-  ggtitle("Total # Steps taken each Day(NAs imputed)")+
-  labs(x="Date",y="Number of Steps")
+
 
 ```
 
